--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1848,6 +1848,8 @@ a.iconBox:hover .iconBox__title { color: white; text-decoration: underline; }
 
 .lead-gen__no { color: #FFF; }
 
+.lead-gen__no:hover { color: inherit; text-decoration: none; }
+
 .lead-gen--prospectus { background: url(//www.staffs.ac.uk/courses/images/lead-generation/lead-gen-prospectus-bg.jpg) top center no-repeat; }
 
 /* CG: Loading spinner for forms */
@@ -1937,7 +1939,7 @@ a.iconBox:hover .iconBox__title { color: white; text-decoration: underline; }
 
 .card a.masthead__school-link { color: white; border-bottom: 1px solid white !important; }
 
-.card a.masthead__school-link:hover { color: #d70a26; border-bottom-color: #d70a26 !important; text-decoration: none; }
+.card a.masthead__school-link:hover { border-bottom: none !important; text-decoration: none; }
 
 .megaNav { position: absolute; left: 0; right: 0; top: 0; background: white; font-size: 1.2em; z-index: 9; overflow: hidden; overflow-y: auto; box-sizing: border-box; overflow-scrolling: touch; transform: translateX(-150%); }
 
