--- a/src/components/lead-generation/_lead-generation.scss
+++ b/src/components/lead-generation/_lead-generation.scss
@@ -12,6 +12,11 @@
 
     &__no {
         color: #FFF;
+
+        &:hover {
+            color: inherit;
+            text-decoration: none;
+        }
     }
 
     &--prospectus {
